@@ -1,3 +1,11 @@
+2008-04-21  Geoffrey Garen  <ggaren@apple.com>
+
+        Build fix.
+
+        * ChangeLog:
+        * WebView/WebScriptDebugDelegate.mm:
+        (-[WebScriptCallFrame scopeChain]):
+
 2008-03-30  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
